# ABAX

./: .gitignore  README.md  fix_environment.sh  main.py  pyproject.toml  restart_kernel.sh
docs/: ABAX_Technical_Report.tex  FINAL_RESULTS_REPORT.md  IMPROVEMENTS_SUMMARY.md  compile_report.sh  data_science_technical_task.md  evaluation_report.md  results_report.md
notebooks/: 01_eda_classification.ipynb  01_project_overview.ipynb  02_classification.ipynb  03_eda_regression.ipynb  04_regression.ipynb  05_raw_data_analysis.ipynb
scripts/: check_errors.py  check_files.py  convert_notebooks.py  create_notebooks.py  fix_notebook.py  generate_all_figures.py  generate_cnn_figure.py  generate_figure1.py  generate_nn_figure.py  generate_notebook_figures.py  health_check.py  regenerate_all_figures.py  regenerate_corrupted_figures.py  regenerate_figures.py  regenerate_regression_figures.py  regenerate_report_figures.py  test_classification_module.py  test_cnn.py  test_cnn_pytorch.py  test_notebook_structure.py  test_notebooks.py  test_raw_classification.py  test_resnet.py  test_simple_nn.py  validate_notebooks.py  verify_figures.py
src/: __init__.py
src/classification/: __init__.py  data.py  sparse_models.py  types.py  visualization.py
src/core/: __init__.py  schemas.py
src/data/: __init__.py  epa_loader.py  raw_loader.py  splitter.py  uah_loader.py
src/features/: __init__.py  analysis.py  preprocessing.py
src/models/: __init__.py  cnn.py  comparison.py  evaluation.py  resnet.py  simple_nn.py  (+2 more)
tests/: test_data.py  test_features.py  test_models.py  test_pipeline.py
(+4 files in other folders)
