[project]
name = "abax"
version = "0.1.0"
description = "ABAX Data Science Technical Assessment"
requires-python = ">=3.9,<3.12"
dependencies = [
    "category-encoders>=2.6.0,<2.7.0",
    "imbalanced-learn>=0.11.0,<0.13.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupytext>=1.15.0",
    "matplotlib>=3.7.0,<3.10.0",
    "numpy>=1.24.0,<1.27.0",
    "pandas>=2.0.0,<2.1.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0,<3.0.0",
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "scipy>=1.11.0,<1.14.0",
    "seaborn>=0.12.0,<0.14.0",
    "torch>=2.0.0,<2.3.0",
    "tqdm>=4.65.0",
]
